Remove all Vercel config files for auto-detection

--- a/package.json
+++ b/package.json
@@ -10,8 +10,5 @@
   },
   "keywords": ["multimedia", "experiments", "ai", "web"],
   "author": "",
-  "license": "MIT",
-  "engines": {
-    "node": "18.x"
-  }
+  "license": "MIT"
 }
